<resources>
    <string name="app_name">En Lettres</string>
    <string name="prompt_label">Entrez le nombre</string>
    <string name="digits" translatable="false">0123456789</string>
    <string name="button_text">Écrire En Lettres</string>
    <string name="prompt_hint">%d chiffres max</string>
    <string name="logo" translatable="false">logo</string>
    <string name="empty_msg">entrez un nombre de %d chiffres maximum</string>
    <string name="response_list_item_icon">lire</string>
    <string name="tts_missing">Le synthétiseur de parole n\'est pas installé !</string>
    <string name="lang_not_available">La langue française n\'est pas disponible sur cet appariel !</string>
    <string name="result_copied">résultat copié !</string>
    <string name="copy_error">Erreur lors de la copie du résultat\n</string>
    <string name="nothing_to_copy">Aucun résultat à copier !</string>
    <string name="nothing_to_share">Aucun résultat à partager</string>
    <string name="share_via">Envoyer via</string>
    <string name="nothing_to_read">Aucun résultat a lire !</string>
    <string name="tts_low_sdk_version">Le synthétiseur de parole n\'est pas pris en charge sur cet Appariel</string>
    <string name="btn_share_desc">partager</string>
    <string name="btn_copy_desc">copier</string>
    <string name="btn_speak_desc">lire</string>
    <string name="menu_history">historique</string>
    <string name="close_sheet">Fermer</string>
    <string name="recyclerview_desc">historiques</string>
    <string name="no_history">historique vide</string>
    <string name="settings">Parametres</string>
    <string name="theme_settings" translatable="false">Theme</string>

    <!-- Preference Titles -->

    <!-- Messages Preferences -->

    <!-- Sync Preferences -->
</resources>