<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:paddingHorizontal="20dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight="match_constraint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:hint="@string/prompt_label"
            app:boxStrokeColor="@color/md_theme_light_primary"
            app:counterEnabled="true"
            app:hintEnabled="true"
            app:layout_constraintBottom_toTopOf="@+id/btn_convert"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintWidth_max="488dp"
            app:layout_constraintWidth_percent="0.9">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/prompt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="@string/digits"
                android:inputType="numberSigned"
                android:maxWidth="488dp"
                android:maxLines="1"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_convert"
            style="@style/ThemeOverlay.Material3.Button.ElevatedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxWidth="320dp"
            android:text="@string/button_text"
            android:textAllCaps="false"
            android:textSize="16sp"
            app:cornerRadius="5dp"
            app:elevation="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_layout"
            app:layout_constraintWidth_max="320dp"
            app:layout_constraintWidth_percent="0.9" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight="match_constraint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2">

        <ScrollView
            android:id="@+id/scrollview"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:isScrollContainer="true"
            android:textColor="@android:color/black"
            android:textSize="23sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/output"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:isScrollContainer="true"
                android:textColor="@android:color/black"
                android:textSize="23sp"
                android:verticalScrollbarPosition="right" />
        </ScrollView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/speak_option"
            style="@style/Widget.Material3.Button.IconButton.Outlined"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:contentDescription="@string/btn_speak_desc"
            app:icon="@drawable/round_volume_up_24"
            app:iconGravity="textStart"
            app:layout_constraintBottom_toTopOf="@+id/copy_option"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread"
            app:shapeAppearanceOverlay="@style/CircularShape"
            tools:viewBindingType="com.google.android.material.button.MaterialButton" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/copy_option"
            style="@style/Widget.Material3.Button.IconButton.Outlined"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:contentDescription="@string/btn_copy_desc"
            app:icon="@drawable/round_content_copy_24"
            app:iconGravity="textStart"
            app:layout_constraintBottom_toTopOf="@+id/share_option"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@id/speak_option"
            app:shapeAppearanceOverlay="@style/CircularShape"
            tools:viewBindingType="com.google.android.material.button.MaterialButton" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/share_option"
            style="@style/Widget.Material3.Button.IconButton.Outlined"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:contentDescription="@string/btn_share_desc"
            app:icon="@drawable/round_share_24"
            app:iconGravity="textStart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@id/copy_option"
            app:shapeAppearanceOverlay="@style/CircularShape"
            tools:viewBindingType="com.google.android.material.button.MaterialButton" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.85" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>